tests/operator/add_bool_num.rev
true + 4 // error: operation not supported